[gd_scene load_steps=8 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://assets/Wooden_UI_png/board.png" type="Texture" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Wooden_UI_png/title.png" type="Texture" id=4]
[ext_resource path="res://projectile_spawn.tscn" type="PackedScene" id=5]
[ext_resource path="res://restart_dialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/slasher_worry.wav" type="AudioStream" id=7]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1020.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Grow Direction", "Material", "Rect", "Size Flags", "Theme" ]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="1"]

position = Vector2( 260, 80 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D" index="0"]

build_mode = 1
polygon = PoolVector2Array( 0, 0, 0, 520, 520, 520, 520, 0 )

[node name="top_left" type="Sprite" parent="StaticBody2D" index="1"]

position = Vector2( 260, 260 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="Node" parent="." index="2" instance=ExtResource( 3 )]

[node name="KinematicBody2D" parent="Node" index="0"]

position = Vector2( 510, 270 )

[node name="Sprite" type="Sprite" parent="." index="3"]

position = Vector2( 520, 50 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset" ]

[node name="Label" type="Label" parent="Sprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -30.0
margin_top = -30.0
margin_right = 16.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Slasher"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "Size Flags", "custom_colors" ]

[node name="score" type="Label" parent="Sprite" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -30.0
margin_top = -13.0
margin_right = 16.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Slasher"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "Size Flags", "custom_colors" ]

[node name="spawnA" parent="." index="4" instance=ExtResource( 5 )]

editor/display_folded = true
spawn_timer = 1

[node name="spawn_frame" parent="spawnA" index="0"]

position = Vector2( 220, 120 )

[node name="spawnB" parent="." index="5" instance=ExtResource( 5 )]

editor/display_folded = true
spawn_timer = 2

[node name="spawn_frame" parent="spawnB" index="0"]

position = Vector2( 220, 560 )

[node name="spawnC" parent="." index="6" instance=ExtResource( 5 )]

editor/display_folded = true
spawn_timer = 3

[node name="spawn_frame" parent="spawnC" index="0"]

position = Vector2( 820, 120 )

[node name="spawnD" parent="." index="7" instance=ExtResource( 5 )]

editor/display_folded = true
spawn_timer = 4

[node name="spawn_frame" parent="spawnD" index="0"]

position = Vector2( 820, 560 )

[node name="end_game" type="Panel" parent="." index="8"]

visible = false
modulate = Color( 1, 1, 1, 0.740314 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="NinePatchRect" parent="end_game" index="0" instance=ExtResource( 6 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -80.0
margin_right = 90.0
margin_bottom = 80.0
_sections_unfolded = [ "Axis Stretch", "Patch Margin", "Visibility" ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="9"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Timer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="take_damage" from="Node/KinematicBody2D" to="." method="_on_KinematicBody2D_take_damage"]

[connection signal="request_target" from="spawnA" to="." method="_on_spawnA_request_target"]

[connection signal="request_target" from="spawnB" to="." method="_on_spawnB_request_target"]

[connection signal="request_target" from="spawnC" to="." method="_on_spawnC_request_target"]

[connection signal="request_target" from="spawnD" to="." method="_on_spawnD_request_target"]

[connection signal="restart" from="end_game/NinePatchRect" to="." method="_on_NinePatchRect_restart"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


[editable path="Node"]
[editable path="spawnA"]
[editable path="spawnB"]
[editable path="spawnC"]
[editable path="spawnD"]
